workspace = { }

[package]
name = "wry"
version = "0.40.1"
authors = [ "Tauri Programme within The Commons Conservancy" ]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Cross-platform WebView rendering library"
readme = "README.md"
repository = "https://github.com/tauri-apps/wry"
documentation = "https://docs.rs/wry"
categories = [ "gui" ]
exclude = [ "/.changes", "/.github", "/audits", "/wry-logo.svg" ]

[package.metadata.docs.rs]
no-default-features = true
features = [ "drag-drop", "protocol", "os-webview" ]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "x86_64-apple-darwin"
]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ "drag-drop", "objc-exception", "protocol", "os-webview" ]
serde = [ "dpi/serde" ]
objc-exception = [ "objc/exception" ]
drag-drop = [ ]
protocol = [ ]
devtools = [ ]
transparent = [ ]
fullscreen = [ ]
linux-body = [ "webkit2gtk/v2_40", "os-webview" ]
mac-proxy = [ ]
os-webview = [
  "javascriptcore-rs",
  "webkit2gtk",
  "webkit2gtk-sys",
  "dep:gtk",
  "soup3",
  "x11-dl",
  "gdkx11"
]
tracing = [ "dep:tracing" ]

[dependencies]
tracing = { version = "0.1", optional = true }
once_cell = "1"
thiserror = "1.0"
http = "1.1"
raw-window-handle = { version = "0.6", features = [ "std" ] }
dpi = "0.1"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
javascriptcore-rs = { version = "=1.1.2", features = [ "v2_28" ], optional = true }
webkit2gtk = { version = "=2.0.1", features = [ "v2_38" ], optional = true }
webkit2gtk-sys = { version = "=2.0.1", optional = true }
gtk = { version = "0.18", optional = true }
soup3 = { version = "0.5", optional = true }
x11-dl = { version = "2.21", optional = true }
gdkx11 = { version = "0.18", optional = true }
percent-encoding = "2.3"

[target."cfg(target_os = \"windows\")".dependencies]
webview2-com = "0.30"
windows-version = "0.1"
windows-core = "0.56"
dunce = "1"

  [target."cfg(target_os = \"windows\")".dependencies.windows]
  version = "0.56"
  features = [
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Globalization",
  "Win32_UI_HiDpi",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse"
]

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
block = "0.1"
cocoa = "0.25"
core-graphics = "0.23"
objc = "0.2"
objc_id = "0.1"

[target."cfg(target_os = \"android\")".dependencies]
crossbeam-channel = "0.5"
html5ever = "0.26"
kuchiki = { package = "kuchikiki", version = "0.8" }
sha2 = "0.10"
base64 = "0.22"
jni = "0.21"
ndk = "0.7"
ndk-sys = "0.4"
ndk-context = "0.1"
tao-macros = "0.1"
libc = "0.2"

[dev-dependencies]
pollster = "0.3.0"
tao = "0.28"
wgpu = "0.19"
winit = "0.29"
getrandom = "0.2"
http-range = "0.1"
percent-encoding = "2.3"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(linux)", "cfg(gtk)" ]
