[package]
name = "hello_world"
version = "0.1.0"
description = "A very simple WRY Appplication"
edition = "2018"

[dependencies]
wry = { path = "../../" }
serde = { version = "1.0", features = [ "derive" ] }

[[bin]]
name = "bench_hello_world"
path = "src/hello_world.rs"

[[bin]]
name = "bench_cpu_intensive"
path = "src/cpu_intensive.rs"
